infra/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-deployment
  labels:
    app: ms-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
        - env:
            - name: DB_AUTH_URL
              valueFrom:
                secretKeyRef:
                  key: DB_MS_AUTH_URL
                  name: ms.auth.secrets
            - name: DB_AUTH_USERNAME
              valueFrom:
                secretKeyRef:
                  key: DB_MS_AUTH_USERNAME
                  name: ms.auth.secrets
            - name: DB_AUTH_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DB_MS_AUTH_PASSWORD
                  name: ms.auth.secrets
          name: ms-auth
          image: yunuskazimov94/ms-auth
          ports:
            - containerPort: 8092
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8092
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /liveness
              port: 8092
            initialDelaySeconds: 30
            periodSeconds: 5
